# Xngine

./: CMakeLists.txt  CMakeSettings.json  README.md  bash.exe.stackdump  mintty.exe.stackdump
Engine/Source/Editor/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.h  XngineEditorApp.cpp  imgui.ini
Engine/Source/Editor/IconManager/: IconManager.cpp  IconManager.h
Engine/Source/Editor/ImGuiWrapper/: ImGuiWrapper.cpp  ImGuiWrapper.h
Engine/Source/Editor/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SceneSettingsPanel.cpp  SceneSettingsPanel.h
Engine/Source/Runtime/: CMakeLists.txt  Xngine.h  Xpch.cpp  Xpch.h
Engine/Source/Runtime/Animation/: animation.cpp  animation.h  animator.h  animdata.h  bone.h
Engine/Source/Runtime/Camera/: EditorCamera.cpp  EditorCamera.h  SceneCamera.cpp  SceneCamera.h
Engine/Source/Runtime/Core/: Application.cpp  Application.h  Buffer.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  MouseCodes.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.h
Engine/Source/Runtime/Core/AppFramework/: Application.cpp  Application.h
Engine/Source/Runtime/Core/AppFramework/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Engine/Source/Runtime/Core/Base/: Assert.h  Base.h  PublicSingleton.h
Engine/Source/Runtime/Core/Log/: Log.cpp  Log.h
Engine/Source/Runtime/Debug/: Instrumentor.h
Engine/Source/Runtime/EcsFramework/Component/: ComponentBase.h  ComponentGroup.h
Engine/Source/Runtime/EcsFramework/Component/Basic/: IDComponent.cpp  IDComponent.h  TagComponent.h
Engine/Source/Runtime/EcsFramework/Component/Camera/: CameraComponent.h
Engine/Source/Runtime/EcsFramework/Component/Light/: DirectionalLightComponent.cpp  DirectionalLightComponent.h  PointLightComponent.cpp  PointLightComponent.h
Engine/Source/Runtime/EcsFramework/Component/Mesh/: MeshComponent.cpp  MeshComponent.h  StaticMeshComponent.cpp  StaticMeshComponent.h
Engine/Source/Runtime/EcsFramework/Component/Physics/: BoxCollider2DComponent.h  CircleCollider2DComponent.h  RigidBody2DComponent.h
Engine/Source/Runtime/EcsFramework/Component/Renderer/: DirectionalLightComponent.cpp  DirectionalLightComponent.h  LightComponent.cpp  LightComponent.h  PointLightComponent.cpp  PointLightComponent.h
Engine/Source/Runtime/EcsFramework/Component/Script/: NativeScriptComponent.h  PythonScriptComponent.cpp  PythonScriptComponent.h
Engine/Source/Runtime/EcsFramework/Component/Shape/: CircleRendererComponent.h  SpriteRendererComponent.h
Engine/Source/Runtime/EcsFramework/Component/Transform/: TransformComponent.cpp  TransformComponent.h
Engine/Source/Runtime/EcsFramework/Entity/: Entity.cpp  Entity.h  ScriptableEntity.cpp  ScriptableEntity.h
Engine/Source/Runtime/EcsFramework/Level/: Level.cpp  Level.h
Engine/Source/Runtime/EcsFramework/Registry/: Registry.h
Engine/Source/Runtime/EcsFramework/Serializer/: SceneSerializer.cpp  SceneSerializer.h
Engine/Source/Runtime/EcsFramework/System/: System.h  SystemGroup.h
Engine/Source/Runtime/EcsFramework/System/Physics/: PhysicSystem2D.cpp  PhysicSystem2D.h  PhysicSystem3D.cpp  PhysicSystem3D.h
Engine/Source/Runtime/EcsFramework/System/Render/: EnvironmentSystem.cpp  EnvironmentSystem.h  RenderSystem2D.cpp  (+3 more)
Engine/Source/Runtime/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/Source/Runtime/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Engine/Source/Runtime/Input/: Input.h  KeyCodes.h
Engine/Source/Runtime/Launch/: Launch.cpp
Engine/Source/Runtime/Math/: Math.cpp
Engine/Source/Runtime/Mesh/: Mesh.cpp  Mesh.h  SubMesh.cpp  SubMesh.h
Engine/Source/Runtime/Platform/DirectX11/: Dx11Context.cpp  Dx11Context.h  Dx11ContextWrapper.h  Dx11ImGuiLayer.cpp  Dx11ImGuiLayer.h  Dx11RendererAPI.cpp  Dx11RendererAPI.h  DxTrace.cpp  DxTrace.h  RenderStates.cpp  RenderStates.h
Engine/Source/Runtime/Platform/OpenGL/: NativeOpenGLShader.cpp  NativeOpenGLShader.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLEnvironment.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLImGuiLayer.cpp  OpenGLImGuiLayer.h  OpenGLImage.cpp  OpenGLImage.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLPipeline.cpp  OpenGLPipeline.h  OpenGLPostProcessing.cpp  OpenGLPostProcessing.h  OpenGLRenderPass.cpp  OpenGLRenderPass.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Engine/Source/Runtime/Platform/Vulkan/: VulkanContext.cpp  VulkanContext.h  VulkanImGuiLayer.cpp  VulkanImGuiLayer.h
Engine/Source/Runtime/Platform/Windows/: WindowsInput.cpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Engine/Source/Runtime/Renderer/: Attachment.h  Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  Image.cpp  Image.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Pipeline.cpp  Pipeline.h  PostProcessing.cpp  PostProcessing.h  RenderCommand.cpp  RenderCommand.h  RenderCommandQueue.cpp  RenderCommandQueue.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  (+18 more)
Engine/Source/Runtime/Resource/AssetManager/: AssetManager.cpp  AssetManager.h
Engine/Source/Runtime/Resource/ConfigManager/: ConfigManager.cpp  ConfigManager.h
Engine/Source/Runtime/Resource/ModeManager/: ModeManager.cpp  ModeManager.h
Engine/Source/Runtime/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.cpp  ScriptableEntity.h
Engine/Source/Runtime/Utils/: PlatformUtils.h
Engine/Source/Runtime/Utils/MathUtils/: MathUtils.h
(+49 files in other folders)
